# arquent

./: README.md  patch_catalog.dart
.github/workflows/: ci.yml
app/cloud/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json  railway.toml  tsconfig.json
app/cloud/src/: server.ts  signature.ts  store.ts
app/cloud/test/: server.test.ts  store.test.ts
app/flutter_client/: README.md  pubspec.yaml
app/flutter_client/lib/: main.dart
app/flutter_client/lib/app/: app.dart  (+1 more)
docs/: deployment-plan-v0.3.md  killer-recipes-v0.3.md  real-scenario-runbook.md
recipes/keys/: ed25519_private.pem  ed25519_public.pem
recipes/ready-v0.3/: README.md
recipes/tools/: README.md  _common.mjs  keygen.mjs  publish-ready-recipes-to-market.mjs  sign-packages.mjs  verify-packages.mjs
rust_core/: Cargo.toml  README.md
rust_core/src/: lib.rs  tests.rs
rust_core/src/connectors/: camera.rs  clipboard.rs  file.rs  health.rs  hotkey.rs  http.rs  kv.rs  manual.rs  microphone.rs  mod.rs  notification.rs  time.rs  webcam.rs
rust_core/src/engine/: evaluator.rs  executor.rs  logging.rs  mod.rs  permission.rs  policy.rs  risk.rs  sandbox.rs  scheduler.rs  state.rs
rust_core/src/ffi/: mod.rs
rust_core/src/recipe/: flow.rs  manifest.rs  mod.rs  model.rs  schema.rs
rust_core/src/security/: hashing.rs  mod.rs  signature.rs  validator.rs
rust_core/src/storage/: crypto.rs  db.rs  migrations.rs  mod.rs
rust_core/src/types/: context.rs  datavalue.rs  errors.rs  mod.rs
scripts/: build_web_prod.sh  preflight_release.sh  start_chrome_demo.sh  stop_chrome_demo.sh
(+79 files in other folders)
