[package]
name = "rust_core"
version = "0.3.0"
edition = "2021"

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
sha2 = "0.10"
thiserror = "2.0"
url = "2.5"
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
rand = "0.8"
